@@ -15,6 +15,8 @@
         - Add textSigle as a plugin receivable information. (diewald)
         - Introduce krill-indexer command via plugin. (diewald)
         - Introduce start-with-backend command via plugin. (diewald)
+        - Replaced list with info API request for client information
+          in OAuth registration flow. (diewald)
 
 0.47 2022-11-22
         - Add command to generate super_client_info file. (diewald)
